--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ img{
 /* Slider Section */
 
 .slider-section {
-    background: url(/slider.jpg) center center;
+    background: url(slider.jpg) center center;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 200px 0;
